# Airbnb

./: README.md  pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_experience_category_alter_experience_host_and_more.py
houses/: models.py
houses/migrations/: 0001_initial.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_room_amenities_alter_room_category_and_more.py
rooms/tests/: test_amenities.py  test_amenity.py  test_rooms.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/: models.py  views.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_experiences_alter_wishlist_rooms_and_more.py
