[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["Juunsik <juunsik29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-dotenv = "^1.4.2"
mysql-connector-python = "^8.2.0"
mysqlclient = "^2.2.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
